--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <!-- Container (About Section) -->
     <div class="w3-content w3-container w3-padding-64" id="about">
         <h3 class="w3-center">Here's a little about me... </h3>
-        <p class="w3-center"><em>My name is Micah Howard. I am an aspiring web developer with dreams of one day opening my own vidogame design company.</em></p>
-        <p></p>
+        <p class="w3-center"><em>Welcome to my website. I am Micah Howard </em></p>
+        <p></p>n company.
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
                 <p><b><i class="fa fa-user w3-margin-right"></i>Micah</b></p><br>
@@ -58,7 +58,9 @@
 
             <!-- Hide this text on small devices -->
             <div class="w3-col m6 w3-hide-small w3-padding-large">
-                <p>Welcome to my website. I am Micah Howard </p>
+                <p>
+                    My name is Micah Howard. I am an aspiring web developer with dreams of one day opening my own vidogame design company.
+                </p>
             </div>
         </div>
         <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
