--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <!-- Container (About Section) -->
     <div class="w3-content w3-container w3-padding-64" id="about">
         <h3 class="w3-center">Here's a little about me... </h3>
-        <p class="w3-center"><em>Welcome to my website. I am Micah Howard </em></p>
-        <p></p>n company.
+        <p class="w3-center"><em>Welcome to my website. I am Micah Howard. I am a software developer currently located in Detroit,michigan</em></p>
+        <p></p>
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
                 <p><b><i class="fa fa-user w3-margin-right"></i>Micah</b></p><br>
@@ -66,18 +66,18 @@
         <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
         <p class="w3-wide"><i class="fa fa-camera"></i>Connecting with others</p>
         <div class="w3-light-grey">
-            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:50%">50%</div>
+            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:100%">50%</div>
         </div>
         <p class="w3-wide"><i class="fa fa-laptop"></i>Managing my emotions</p>
         <div class="w3-light-grey">
-            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
+            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:100%">85%</div>
         </div>
         <p class="w3-wide"><i class="fa fa-photo"></i>Public speaking</p>
         <div class="w3-light-grey">
-            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
+            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:100%">75%</div>
         </div>
     </div>
-
+<!--
     <div class="w3-row w3-center w3-dark-grey w3-padding-16">
         <div class="w3-quarter w3-section">
             <span class="w3-xlarge">14+</span><br>
@@ -96,7 +96,7 @@
             Meetings
         </div>
     </div>
-
+-->
     <!-- Second Parallax Image with Portfolio Text -->
     <div class="bgimg-2 w3-display-container w3-opacity-min">
         <div class="w3-display-middle">
@@ -107,7 +107,7 @@
     <!-- Container (Portfolio Section) -->
     <div class="w3-content w3-container w3-padding-64" id="portfolio">
         <h3 class="w3-center">MY WORK</h3>
-        <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make
+        <p class="w3-center"><em>Here are some of my latest work.<br> Click on the images to make
                 them bigger</em></p><br>
 
         <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
@@ -173,8 +173,8 @@
 
     <!-- Container (Contact Section) -->
     <div class="w3-content w3-container w3-padding-64" id="contact">
-        <h3 class="w3-center">WHERE I WORK</h3>
-        <p class="w3-center"><em>I'd love your feedback!</em></p>
+        <h3 class="w3-center">CONTACT ME HERE</h3>
+       <!-- <p class="w3-center"><em>I'd love your feedback!</em></p>-->
 
         <div class="w3-row w3-padding-32 w3-section">
             <div class="w3-col m4 w3-container">
@@ -182,13 +182,12 @@
             </div>
             <div class="w3-col m8 w3-panel">
                 <div class="w3-large w3-margin-bottom">
-                    <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Detroit, US<br>
-                    <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +00
-                    151515<br>
-                    <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email:
-                    mail@mail.com<br>
+                    <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Detroit,MI USA<br>
+                    <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +1 313-969-0318<br>
+                    <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: micahhoward99@gmail.com
+                    <br>
                 </div>
-                <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave me a note:</p>
+               <!-- <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave me a note:</p> -->
                 <form action="/action_page.php" target="_blank">
                     <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
                         <div class="w3-half">
