--- a/index.html
+++ b/index.html
@@ -215,10 +215,9 @@
             <i class="fa fa-snapchat w3-hover-opacity"></i>
             <i class="fa fa-pinterest-p w3-hover-opacity"></i>
             <i class="fa fa-twitter w3-hover-opacity"></i>
-            <i class="fa fa-linkedin w3-hover-opacity"></i>
-    <p class="w3-small">This website was made with W3schools Spaces. Make your own free website today!</p>
-    <a class="w3-button w3-round-xxlarge w3-small w3-light-grey w3-margin-bottom" href="https://www.w3schools.com/spaces" target="_blank">Start now</a>
-    <!-- Footer end. -->
+            <i><a href="portfolio.html"></a><i class="fa fa-linkedin w3-hover-opacity"></i></a>></i>>
+    <p class="w3-small"></p>
+   
     </footer>
     <script src="main.js"></script>
 
