--- a/index.html
+++ b/index.html
@@ -106,9 +106,8 @@
 
     <!-- Container (Portfolio Section) -->
     <div class="w3-content w3-container w3-padding-64" id="portfolio">
-        <h3 class="w3-center">MY WORK</h3>
-        <p class="w3-center"><em>Here are some of my latest work.<br> Click on the images to make
-                them bigger</em></p><br>
+        <h3 class="w3-center">My Projects</h3>
+        <p class="w3-center"><em>Here are some of my latest work.<br></em></p><br>
 
         <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
         <div class="w3-row-padding w3-center">
@@ -210,12 +209,9 @@
     <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
         <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
         <div class="w3-xlarge w3-section">
-            <i class="fa fa-facebook-official w3-hover-opacity"></i>
             <i class="fa fa-instagram w3-hover-opacity"></i>
-            <i class="fa fa-snapchat w3-hover-opacity"></i>
-            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
             <i class="fa fa-twitter w3-hover-opacity"></i>
-            <i><a href="portfolio.html"></a><i class="fa fa-linkedin w3-hover-opacity"></i></a>></i>>
+            <a href="https://www.linkedin.com/in/micah-howard-0b3673185/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
     <p class="w3-small"></p>
    
     </footer>
