--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
         <p class="w3-wide"><i class="fa fa-camera"></i>Connecting with others</p>
-        <div class="w3-light-grey">
+        <!-- <div class="w3-light-grey">
             <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:100%">50%</div>
         </div>
         <p class="w3-wide"><i class="fa fa-laptop"></i>Managing my emotions</p>
@@ -76,7 +76,7 @@
         <div class="w3-light-grey">
             <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:100%">75%</div>
         </div>
-    </div>
+    </div> -->
 <!--
     <div class="w3-row w3-center w3-dark-grey w3-padding-16">
         <div class="w3-quarter w3-section">
