--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <!-- First Parallax Image with Logo Text -->
     <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
         <div class="w3-display-middle" style="white-space:nowrap;">
-            <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span
-                    class="w3-hide-small">SITEs</span> LOGO</span>
+            <!-- <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span
+                    class="w3-hide-small">SITEs</span> LOGO</span> -->
         </div>
     </div>
 
@@ -63,10 +63,10 @@
                 </p>
             </div>
         </div>
-        <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
+        <!-- <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
         <p class="w3-wide"><i class="fa fa-camera"></i>Connecting with others</p>
-        <!-- <div class="w3-light-grey">
-            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:100%">50%</div>
+        <div class="w3-light-grey"> -->
+            <!-- <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:100%">50%</div>
         </div>
         <p class="w3-wide"><i class="fa fa-laptop"></i>Managing my emotions</p>
         <div class="w3-light-grey">
@@ -76,7 +76,7 @@
         <div class="w3-light-grey">
             <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:100%">75%</div>
         </div>
-    </div> -->
+    </div> --> 
 <!--
     <div class="w3-row w3-center w3-dark-grey w3-padding-16">
         <div class="w3-quarter w3-section">
