Changed profile pic

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
     <!-- Container (About Section) -->
     <div class="w3-content w3-container w3-padding-64" id="about">
         <h3 class="w3-center">Here's a little about me... </h3>
-        <p class="w3-center"><em>Welcome to my website. I am Micah Howard. I am a software developer currently located in Detroit,michigan</em></p>
+        <p class="w3-center"><em>Welcome to my website. I am Micah Howard. I am a software developer currently located in Detroit,michigan. Join me as I continue to </em></p>
         <p></p>
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
                 <p><b><i class="fa fa-user w3-margin-right"></i>Micah</b></p><br>
-                <img src="https://www.washingtonpost.com/resizer/83ZHRGeQSw8G6R1VBB3EZvJyFpM=/1484x0/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/KWHJDRRYRUI6RLZ4EERXCX3Y34.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me"
-                    width="500" height="333">
+                <img src="veture313.jpeg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me"
+                    width= 60% >
             </div>
 
             <!-- Hide this text on small devices -->
             <div class="w3-col m6 w3-hide-small w3-padding-large">
                 <p>
-                    My name is Micah Howard. I am an aspiring web developer with dreams of one day opening my own vidogame design company.
+                    My name is Micah Howard. I am an aspiring web developer with dreams of one day opening my own vidogame design company. I have experience with Swift UI, HTML, CSS, and Javascript. 
                 </p>
             </div>
         </div>
@@ -134,12 +134,12 @@
 
         <div class="w3-row-padding w3-center w3-section">
             <div class="w3-col m3">
-                <img src="https://www.w3schools.com/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+                <img src="https://www.w3schools.com/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
             </div>
 
             <div class="w3-col m3">
                 <img src="https://www.w3schools.com/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
-                    alt="My beloved typewriter">
+                    alt="">
             </div>
 
             <div class="w3-col m3">
@@ -148,7 +148,7 @@
             </div>
 
             <div class="w3-col m3">
-                <img src="https://www.w3schools.com/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
+                <img src="https://www.w3schools.com/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
             </div>
         </div>
     </div>
